--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.rst
-include chromedriver-py/chromedriver.exe
-include chromedriver-py/chromedriver_linux
-include chromedriver-py/chromedriver_mac
+include README.md
+include chromedriver_py/chromedriver.exe
+include chromedriver_py/chromedriver_linux
+include chromedriver_py/chromedriver_mac
