--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.md
+include version.txt
 include chromedriver_py/chromedriver.exe
 include chromedriver_py/chromedriver_linux
 include chromedriver_py/chromedriver_mac
