--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
 include README.md
-include version.txt
-include chromedriver_py/chromedriver.exe
-include chromedriver_py/chromedriver_linux
-include chromedriver_py/chromedriver_mac
+include CURRENT_VERSION.txt
+include chromedriver_py/chromedriver_win32.exe
+include chromedriver_py/chromedriver_win64.exe
+include chromedriver_py/chromedriver_linux32
+include chromedriver_py/chromedriver_linux64
+include chromedriver_py/chromedriver_mac32
+include chromedriver_py/chromedriver_mac64
