--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 cache: pip
 
 python:
-    - 3
+    - 3.7
 
 branches:
   only:
@@ -14,3 +14,18 @@ install:
 
 script:
   - python3 updater.py
+
+before_deploy:
+  - echo "hello world"
+deploy:
+  provider: pypi
+  user: scriptworld
+  password: $PYPI_PASSWORD
+  distributions: sdist bdist_wheel
+  skip_existing: true
+  on:
+    branch: master
+after_deploy:
+  - echo "done !"
+  - git add -all && git commit -a -m "update version" && git push
+  - echo "done pushing to git"
