--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,8 @@
 name: Deploy to PyPi
 
 on:
+  schedule:
+    - cron: '0 * * * *'
   push:
     branches: [ master ]
 
@@ -12,8 +14,8 @@ jobs:
         uses: actions/checkout@v2.3.1
       - name: Set up Python 3.9
         uses: actions/setup-python@v1
-      with:
-        python-version: 3.9
+        with:
+          python-version: 3.9
       - run: pip3 install -r requirements.txt
       - run: python3 updater.py
       - name: Install pypa/build
