--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,16 @@
 *.pyc
 
 # Setuptools distribution folder.
-/dist/
+dist
+build
 
 # Python egg metadata, regenerated from source files by setuptools.
-/*.egg-info
+*.egg-info
 
 .DS_Store
 .mypy_cache
-/chromedriver_py/chromedriver*
+chromedriver_py/chromedriver*
 
 .venv
+
+CURRENT_VERSION.txt
