run workflow every hour
Signed-off-by: Felix Breuer <fbreuer@pm.me>

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy to PyPi
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 * * * *'
   push:
     branches: [ master ]
   workflow_dispatch:
