--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,35 +5,34 @@ on:
     - cron: '0 0 * * *'
   push:
     branches: [ master ]
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to update'
-        required: false
-        default: ''
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.1
-      - name: Set up Python 3.9
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
+        name: Set up Python
         uses: actions/setup-python@v5
-        with:
-          python-version: 3.9
-      - run: pip3 install -r requirements.txt
-      - name: Search for new version
+      -
+        run: pip3 install -r requirements.txt
+      -
+        name: Search for new version
         run: python3 updater.py
-        env:
-          VERSION: ${{ github.event.inputs.version }}
-      - name: Install pypa/build
+      -
+        name: Install pypa/build
+        # only run if we found a new version
+        if: ${{ hashFiles('CURRENT_VERSION.txt') != '' }}
         run: >-
           python -m
           pip install
           build
           --user
-      - name: Build a binary wheel and a source tarball
+      -
+        name: Build a binary wheel and a source tarball
+        if: ${{ hashFiles('CURRENT_VERSION.txt') != '' }}
         run: >-
           python -m
           build
@@ -41,7 +40,9 @@ jobs:
           --wheel
           --outdir dist/
           .
-      - name: Publish distribution to PyPI
+      -
+        name: Publish distribution to PyPI
+        if: ${{ hashFiles('CURRENT_VERSION.txt') != '' }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
